Minor updated Custom scrollbar added on "Requisites" block; Fixed scrollspy on Chrome;

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: Pavlo Knyazevich
 Author URI: https://github.com/Knyazevich
 Description: Custom theme: Blagorodnyi, developed by Pavlo Knyazevich
-Version: 1.0.2
+Version: 1.0.3
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: mst_blag
@@ -345,6 +345,23 @@ h5 {font-size: 16px; letter-spacing: normal;}
   /*border-left: none;*/
   padding: 40px 35px;
   overflow-y: scroll;
+}
+
+.props__props-info::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+.props__props-info::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+.props__props-info::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #333;
 }
 
 .props__secondary-title {
